Adjusted some of the toolbar sizes to make it look a bit nicer, should fill the div without cutoff now. Rearranged some of the selectors and buttons to make it look more uniform, can change it back if it looks bad. Made the 4 buttons at the top uniform, that tiny load was killing me. Changed some of the text that was “misleading”, basically changed all occurrences of the word shape to element. Fixed light color load in issues, lights now load in the correct color in the editor. Fixed light color not applying to meshes, multiple light sources and the mesh color all play a factor in what color the actual mesh is now. Easiest to see using a white object. Added a scene size controller, basically this helps control the range of the sliders. Setting it to 10 will kind of create a (+-)10 X 10 X 10 scene and the sliders will range from -10 to +10. Hopefully this will help manipulation of the objects in space, and stop a user from fumbling to get exactly 22 on a slider ranging to 200, helped me at least lol. Implemented this on all meshes position, scale, and geometry settings, as well as the position of lights, and vertex positions in the explode/extrude menu. Currently still working on adding some letters to the scene to represent the vertices in the explode feature so the user will know which vertex they are messing with prior to actually adjusting it, text is hard apparently lol. Shadows are also still being a complete pain played around with various settings in an attempt to get them to show up but still haven’t managed to get that working yet either. mesh.castShadow =  true, mesh.recieveShadow = true, renderer.shadowMapEnabled = true along with settings in the actual lights. I’m missing some piece of the puzzle but don’t know what. Thought about the single particle system problem but didn’t get around to working on that, I believe adding in a local parameter to the individual particle systems that is just a copy of the global one and then only update the selected parti

--- a/mainStyle.css
+++ b/mainStyle.css
@@ -13,8 +13,8 @@ body {
     /*position: absolute;*/
     position: absolute;
     top: 10vh;
-    left: 15vw;
-    width: 70vw;
+    left: 20vw;
+    width: 60vw;
     height: 90vh;
     background-color: #555555;
 }
@@ -25,21 +25,21 @@ body {
     color: #FFFFFF;
     top: 10vh;
     height: 90vh;
-    width: 15vw;
+    width: 20vw;
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: hidden;
     background-color: #000000;
-    font-size: 1vw;
+    font-size: 1.5vw;
     text-align: center;
 }
 
 #rightSideBarDiv {
     /*position: absolute;*/
-    margin-left: -30px;
     position: absolute;
+    padding-left:35px;
     color: #FFFFFF;
     top: 10vh;
-    left: 85%;
+    left: 80vw;
     height: 90vh;
     width: 20vw;
     background: linear-gradient(#125252, #000000);
@@ -69,18 +69,20 @@ body {
 }
 
 #editor2Div {
-    margin-left: -30px;
+
 }
 
 #editorDiv {
-    margin-right: -30px;
+    padding-left:25px;
+    width:100%;
     height: 77%;
     background: linear-gradient(#125252, #000000);
 }
 
 #meshSelector {
-    width: 90%;
+    width: 100%;
     height: 15%;
+    margin-bottom: 10px;
 }
 
 #save_butt {
@@ -91,13 +93,16 @@ body {
     font-size: 01vw;
 
 }
-
+#place_butt {
+    margin-top: 5px;
+    width: 100%;
+}
 #load_butt {
     position: static;
     left: 105px;
     top: 10px;
     width: 75px;
-    font-size: .9vw;
+    font-size: 01vw;
 }
 
 #show_grid {
